tests/invalid/list_set_type_mismatch/main.py
def main() -> None:
    xs: list[int] = [1, 2, 3]
    xs[0] = "hello"
